syntax = "proto3";

option csharp_namespace = "GrpcHelper.LogService";
import "google/protobuf/timestamp.proto";

package logger;

service Logger {
    rpc WriteLog(LogModel) returns (WriteResponse);
    rpc GetLogs(LogsRequest) returns (LogsResponse);
}

message LogModel {
    string id = 1;
    string application = 2;
    string message = 4;
    google.protobuf.Timestamp timestamp = 5;
}

message WriteResponse {
  bool success = 1;
}

message LogsResponse {
    repeated LogModel logs = 1;
}

message LogsRequest {
    LogModel filter = 1;
}